--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "vue-js-modal": "^1.3.12",
         "vue-notification": "^1.3.4",
+        "vue-print-nb": "^1.0.3",
         "vue-switches": "^2.0.1"
     }
 }
