--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "bacon/bacon-qr-code": "^1.0",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "fideloper/proxy": "~3.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "pragmarx/google2fa-laravel": "^0.2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
